looks better now :D

--- a/style.css
+++ b/style.css
@@ -9,18 +9,18 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #091921;
+    background: #0d1012;
 }
 
 .clock {
-    width: 350px;
-    height: 350px;
+    width: 400px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
     background: url(clock.png);
     background-size: cover;
-    border: 4px solid #091921;
+    border: 4px solid #0d1012;
     border-radius: 50%;
     box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05), inset 0 -15px 15px rgba(255, 255, 255, 0.05), 0 15px 15px rgba(0, 0, 0, 0.3), inset 0 15px 15px rgba(0, 0, 0, 0.3);
 }
@@ -30,7 +30,7 @@ body {
     position: absolute;
     width: 15px;
     height: 15px;
-    background: #fff;
+    background: #a38136;
     border-radius: 50%;
     z-index: 10000;
 }
@@ -74,7 +74,7 @@ body {
     position: absolute;
     width: 8px;
     height: 80px;
-    background: #f800ec;
+    background: #745C26;
     z-index: 10;
     border-radius: 6px 6px 0 0;
 }
@@ -84,7 +84,7 @@ body {
     position: absolute;
     width: 4px;
     height: 90px;
-    background: #361ec2;
+    background: #745C26;
     z-index: 11;
     border-radius: 6px 6px 0 0;
 }
@@ -94,7 +94,7 @@ body {
     position: absolute;
     width: 2px;
     height: 150px;
-    background: #8401ff;
+    background: #745C26;
     z-index: 12;
     border-radius: 6px 6px 0 0;
 }
